--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,18 +1,43 @@
-<h1>Listing articles</h1>
-<%= link_to 'New article', new_article_path %>
-<table>
-	<tr>
-		<th>Title</th>
-		<th>Text</th>
-		<th colspan="3"></th>
-	</tr>
-	<% @articles.each do |article|%>
-	<tr>
-		<td><%= article.title %></td>
-		<td><%= article.text %></td>
-		<td><%= link_to 'Show', article_path(article) %></td>
-		<td><%= link_to 'Edit', edit_article_path(article) %></td>
-		<td><%= link_to 'Destroy', article_path(article), method: :delete, data: { confirm: 'Are you sure?' } %></td>
-	</tr>
-	<% end %>
-</table>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <%= link_to "sample app", '#', { class: "navbar-brand"} %>
+    </div>
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><%= link_to 'Articles', articles_path %></li>
+        <li><%= link_to 'New article', new_article_path %></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<div class="container">
+	<div class="row">
+		<div class="col-xs-12">
+			<h1>Articles</h1>
+			<table class="table">
+				<tr>
+					<th>Title</th>
+					<th>Text</th>
+					<th colspan="3"></th>
+				</tr>
+				<% @articles.each do |article|%>
+				<tr>
+					<td><%= article.title %></td>
+					<td><%= article.text %></td>
+					<td><%= link_to 'Show', article_path(article) %></td>
+					<td><%= link_to 'Edit', edit_article_path(article) %></td>
+					<td><%= link_to 'Destroy', article_path(article), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+				</tr>
+				<% end %>
+			</table>
+		</div>
+	</div>
+</div>
