--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -19,25 +19,19 @@
 </nav>
 
 <div class="container">
+	<% @articles.each do |article| %>
 	<div class="row">
-		<div class="col-xs-12">
-			<h1>Articles</h1>
-			<table class="table">
-				<tr>
-					<th>Title</th>
-					<th>Text</th>
-					<th colspan="3"></th>
-				</tr>
-				<% @articles.each do |article|%>
-				<tr>
-					<td><%= article.title %></td>
-					<td><%= article.text %></td>
-					<td><%= link_to 'Show', article_path(article) %></td>
-					<td><%= link_to 'Edit', edit_article_path(article) %></td>
-					<td><%= link_to 'Destroy', article_path(article), method: :delete, data: { confirm: 'Are you sure?' } %></td>
-				</tr>
-				<% end %>
-			</table>
+		<h2><%= article.title %></h2>
+		<div class="col-md-10">
+			<%= article.text %>
+		</div>
+		<div class="col-md-2">
+			<div class="list-group">
+				<%= link_to 'Show', article_path(article), {class: "list-group-item"} %>
+				<%= link_to 'Edit', edit_article_path(article), {class: "list-group-item"} %>
+				<%= link_to 'Destroy', article_path(article), method: :delete, data: { confirm: 'Are you sure?' }, class: "list-group-item list-group-item-danger" %>
+			</div>
 		</div>
 	</div>
+	<% end %>
 </div>
