--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for @article do |f| %>
 
 <% if @article.errors.any? %>
-<div id="error_explanation">
+<div id="error_explanation" class="alert alert-danger">
 	<h2><%= pluralize(@article.errors.count, "error") %> prohibited this article from being saved:</h2>
 	<ul>
 		<% @article.errors.full_messages.each do |msg| %>
@@ -13,15 +13,15 @@
 
 <p>
 	<%= f.label :title %><br>
-	<%= f.text_field :title %>
+	<%= f.text_field :title, class: "form-control" %>
 </p>
 
 <p>
 	<%= f.label :text %><br>
-	<%= f.text_area :text %>
+	<%= f.text_area :text, class: "form-control" %>
 </p>
 
 <p>
-	<%= f.submit %>
+	<%= f.submit 'Post', class: "btn btn-default" %>
 </p>
 <% end %>
