--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,5 +1,4 @@
 <h1>Editing article</h1>
-
+<div class="container"><div class="row"><div class="col-md-12">
 <%= render 'form' %>
-
-<%= link_to 'Back', articles_path %>
+</div></div></div>
