--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Article</h1>
 
+<div class="container"><div class="row"><div class="col-md-12">
 <%= render 'form' %>
-
-<%= link_to 'Back', articles_path %>
+</div></div></div>
