--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,19 +1,23 @@
-<p>
-	<strong>Title: </strong>
-	<%= @article.title %>
-</p>
-
-<p>
-	<strong>Text: </strong>
-	<%= @article.text %>
-</p>
-
-<h2>Comments:</h2>
-<%= render @article.comments %>
-
-
-<h2>Add a comment:</h2>
-<%= render 'comments/form' %>
-
-<%= link_to 'Edit', edit_article_path(@article) %> |
-<%= link_to 'Back', articles_path %>
+<div class="container">
+	<div class="row">
+		<h2><%= @article.title %></h2>
+		<div class="col-md-10">
+			<%= @article.text %>
+		</div>
+		<div class="col-md-2">
+			<div class="list-group">
+				<%= link_to 'Edit', edit_article_path(@article), {class: "list-group-item"} %>
+				<%= link_to 'Destroy', article_path(@article), method: :delete, data: { confirm: 'Are you sure?' }, class: "list-group-item list-group-item-danger" %>
+			</div>
+		</div>
+	</div>
+	<div class="row">
+		<h2>Comments</h2>
+		<div class="col-md-6">
+			<%= render @article.comments %>
+		</div>
+		<div class="col-md-6">
+			<%= render 'comments/form' %>
+		</div>
+	</div>
+</div>
