--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,12 +1,10 @@
-<p>
-	<strong>Commenter:</strong> <%= comment.commenter %>
-</p>
-<p>
-	<strong>Comment:</strong> <%= comment.body %>
-</p>
-
-<p>
-	<%= link_to 'Destroy Comment', [comment.article, comment],
-									method: :delete,
-									data: {confirm: 'Are you sure?' } %>
-</p>
+<div class="panel panel-default">
+	<div class="panel-heading"><%= comment.commenter %></div>
+	<div class="panel-body"><%= comment.body %></div>
+	<div class="panel-footer">
+		<%= link_to 'Destroy Comment', [comment.article, comment],
+										method: :delete,
+										data: {confirm: 'Are you sure?' },
+										class: "btn btn-danger" %>
+		</div>
+</div>
