--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,12 +16,12 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to "sample app", '#', { class: "navbar-brand"} %>
+      <%= link_to "sample blog", '#', { class: "navbar-brand"} %>
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><%= link_to 'Articles', articles_path %></li>
-        <li><%= link_to 'New article', new_article_path %></li>
+        <li><%= link_to 'New Article', new_article_path %></li>
       </ul>
     </div>
   </div>
