--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,6 +1,10 @@
 <div class="container">
 	<div class="row">
-		<h2><%= @article.title %></h2>
+		<div class="col-md-12">
+			<h2><%= @article.title %></h2>
+		</div>
+	</div>
+	<div class="row">
 		<div class="col-md-10">
 			<%= @article.text %>
 		</div>
@@ -12,11 +16,12 @@
 		</div>
 	</div>
 	<div class="row">
-		<h2>Comments</h2>
 		<div class="col-md-6">
+			<h2>Comments</h2>
 			<%= render @article.comments %>
 		</div>
 		<div class="col-md-6">
+			<h2>Add Comment</h2>
 			<%= render 'comments/form' %>
 		</div>
 	</div>
