Truncate amount of characters in article list
Limited to 80 characters, which is an aggressive cutoff but oh well

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,7 +5,7 @@
 	<div class="row">
 		<h2><%= article.title %></h2>
 		<div class="col-md-10">
-			<%= article.text %>
+			<%= article.text.first(80) %>
 		</div>
 		<div class="col-md-2">
 			<div class="list-group">
