Format article preview
No parsing of whether it’s mid-word or not, just character cutoff, but
now adds an ellipsis if it cuts off.

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,7 +5,7 @@
 	<div class="row">
 		<h2><%= article.title %></h2>
 		<div class="col-md-10">
-			<%= article.text.first(80) %>
+			<%= article.text.length > 100 ? article.text.first(100)+"..." : article.text %>
 		</div>
 		<div class="col-md-2">
 			<div class="list-group">
