Use Devise for user authentication
Using Devise to do basic user authentication, and the requisite changes
to views to actually make use of knowing when someone is signed in or
not.

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -10,8 +10,10 @@
 		</div>
 		<div class="col-md-2">
 			<div class="list-group">
+				<% if user_signed_in? %>
 				<%= link_to 'Edit', edit_article_path(@article), {class: "list-group-item"} %>
 				<%= link_to 'Destroy', article_path(@article), method: :delete, data: { confirm: 'Are you sure?' }, class: "list-group-item list-group-item-danger" %>
+				<% end %>
 			</div>
 		</div>
 	</div>
@@ -22,7 +24,11 @@
 		</div>
 		<div class="col-md-6">
 			<h2>Add Comment</h2>
+			<% if user_signed_in? %>
 			<%= render 'comments/form' %>
+			<% else %>
+			<p>You need to be signed in to add a comment.</p>
+			<% end %>
 		</div>
 	</div>
 </div>
