--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -10,8 +10,10 @@
 		<div class="col-md-2">
 			<div class="list-group">
 				<%= link_to 'Show', article_path(article), {class: "list-group-item"} %>
+				<% if user_signed_in? %>
 				<%= link_to 'Edit', edit_article_path(article), {class: "list-group-item"} %>
 				<%= link_to 'Destroy', article_path(article), method: :delete, data: { confirm: 'Are you sure?' }, class: "list-group-item list-group-item-danger" %>
+				<% end %>
 			</div>
 		</div>
 	</div>
