--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,14 @@
         <li><%= link_to 'Articles', articles_path %></li>
         <li><%= link_to 'New Article', new_article_path %></li>
       </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <% if user_signed_in? %>
+        <p class="navbar-text"><%= current_user.email %></p>
+        <%= link_to 'Sign Out', destroy_user_session_path, :method => :delete, class: "navbar-text" %>
+        <% else %>
+        <%= link_to "Sign in", new_user_session_path, class: "navbar-text" %>
+        <% end %>
+      </ul>
     </div>
   </div>
 </nav>
